# src/app/api/index.ts
@@ -1,18 +1,17 @@
-import {ProjectStatus} from 'state/type'
+import { ProjectStatus, Project } from "state/type";
 
-const BASE_URL = 'https://quicklaunchpad.io/';
-import axios from 'axios';
-
+const BASE_URL = "https://quicklaunchpad.io/";
+import axios from "axios";
 
 export const projectApi = axios.create({
-    baseURL: BASE_URL,
-    headers: {
-      'Content-Type': 'application/json',
-    },
-  });
+  baseURL: BASE_URL,
+  headers: {
+    "Content-Type": "application/json",
+  },
+});
 
 export const getProjectsByStatus = async (status: ProjectStatus) => {
-    const res = await projectApi.get(`/projects?status=${status}`);
-    console.log(res)
-    return res
-  }
+  const res = await projectApi.get(`/projects?status=${status}`);
+  console.log(res);
+  return res;
+};
